--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^2.0.2",
+    "prom-client": "^15.1.3",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   }
