--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@aws-sdk/client-s3": "^3.873.0",
     "@aws-sdk/client-sqs": "^3.875.0",
     "@aws-sdk/lib-dynamodb": "^3.821.0",
+    "axios": "^1.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
