--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -11,7 +11,7 @@ data:
   LOG_LEVEL: info
   TIMEOUT_MS: "30000"
   AWS_S3_BUCKET_NAME: "video-processing-storage-fiap-x"
-  AWS_S3_ENDPOINT: "https://s3.amazonaws.com"
+  AWS_S3_ENDPOINT: ""
   AWS_SQS_ENDPOINT: "https://sqs.us-east-1.amazonaws.com"
   AWS_SQS_PRODUCER_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/608645417480/video-processing-queue.fifo"
   AWS_SQS_CONSUMER_QUEUE_URL: "https://sqs.us-east-1.amazonaws.com/608645417480/video-results-queue.fifo"
