--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -58,12 +58,20 @@ jobs:
           --name $CLUSTER_NAME \
           --region $AWS_REGION
 
+
       - name: Create Kubernetes Secret with AWS credentials
         run: |
           kubectl create secret generic aws-credentials \
             --from-literal=AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             --from-literal=AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             --from-literal=AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} \
+            --dry-run=client -o yaml | kubectl apply -f -
+
+      - name: Create Kubernetes Secret with Mailtrap credentials
+        run: |
+          kubectl create secret generic mailtrap-credentials \
+            --from-literal=MAILTRAP_USER=${{ secrets.MAILTRAP_USER }} \
+            --from-literal=MAILTRAP_PASS=${{ secrets.MAILTRAP_PASS }} \
             --dry-run=client -o yaml | kubectl apply -f -
 
 
