--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.4",
+    "@types/nodemailer": "^7.0.1",
     "@types/swagger-ui-express": "^4.1.7",
     "@types/yamljs": "^0.2.34",
     "jest": "^29.7.0",
